--- a/DailyProgramming/Pages/LoginPage.xaml
+++ b/DailyProgramming/Pages/LoginPage.xaml
@@ -7,7 +7,9 @@
         <StackLayout>
             <Label Text="LoginPage"
                 HorizontalOptions="CenterAndExpand" />
-            <Button Text="Sign In" Command="{Binding SignInCommand}" />
+            <Entry Placeholder="Username" Text="{Binding Username}" />
+            <Entry Placeholder="Password" Text="{Binding Password}" IsPassword="True" />
+            <Button Text="Log In" Command="{Binding SignInCommand}" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
