--- a/DailyProgramming/Pages/LoginPage.xaml
+++ b/DailyProgramming/Pages/LoginPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:pagemodels="clr-namespace:DailyProgramming.Models.PageModels" x:DataType="pagemodels:LoginPageModel"
              Title="Login"
              x:Class="DailyProgramming.Pages.LoginPage">
     <ContentPage.Content>
@@ -9,7 +10,7 @@
                 HorizontalOptions="CenterAndExpand" />
             <Entry Placeholder="Username" Text="{Binding Username}" />
             <Entry Placeholder="Password" Text="{Binding Password}" IsPassword="True" />
-            <Button Text="Log In" Command="{Binding SignInCommand}" />
+            <Button Text="Log In" Command="{Binding LogInCommand}" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
