--- a/DailyProgramming/Pages/DashboardPage.xaml
+++ b/DailyProgramming/Pages/DashboardPage.xaml
@@ -1,12 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+            mc:Ignorable="d"
+            xmlns:pages="clr-namespace:DailyProgramming.Pages"
+            xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
+            android:TabbedPage.ToolbarPlacement="Bottom"
              x:Class="DailyProgramming.Pages.DashboardPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                HorizontalOptions="CenterAndExpand" />
-            <Button Text="DashBoard" />
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    <TabbedPage.Children>
+        <NavigationPage Title="Profile">
+            <x:Arguments>
+                <pages:ProfilePage BindingContext="{Binding ProfilePageModel}"/>
+            </x:Arguments>
+        </NavigationPage>
+        <NavigationPage Title="Tickets">
+            <x:Arguments>
+                <pages:TicketsPage BindingContext="{Binding TicketsPageModel}"/>
+            </x:Arguments>
+        </NavigationPage>
+        <NavigationPage Title="Settings">
+            <x:Arguments>
+                <pages:SettingsPage BindingContext="{Binding SettingsPageModel}"/>
+            </x:Arguments>
+        </NavigationPage>
+    </TabbedPage.Children>
+  
+</TabbedPage>
