--- a/DailyProgramming/Pages/NewTicketPage.xaml
+++ b/DailyProgramming/Pages/NewTicketPage.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:pagemodels="clr-namespace:DailyProgramming.Models.PageModels" x:DataType="pagemodels:NewTicketPageModel"
              x:Class="DailyProgramming.Pages.NewTicketPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout BackgroundColor="LightBlue" Padding="20, 10, 20, 5">
+                <Label Text="{Binding Id, StringFormat='Ticket Nº: {0}'}"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
